Fixed NicEdit layout issue in firefox.

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -87,6 +87,10 @@ table td {
 	vertical-align: top;
 }
 
+/* NicEdit - Shouldn't have to do this. But it floats weird in firefox */
+.nicEdit-panelContain {
+	clear: both;
+}
 
 /*
  * Flash Messages.
